style: fix for ios wrapped height

--- a/themes/delphi/assets/css/pages/_covidcast.scss
+++ b/themes/delphi/assets/css/pages/_covidcast.scss
@@ -5,7 +5,7 @@
 .covidcast_wrapper {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .covidcast_wrapper:not(.covidcast_wrapper_footer) > footer {
